Source/WebCore/dom/Range.cpp
@@ -1143,11 +1143,13 @@ Node* Range::pastLastNode() const
     return NodeTraversal::nextSkippingChildren(endContainer());
 }
 
-IntRect Range::absoluteBoundingBox() const
+IntRect Range::absoluteBoundingBox(OptionSet<BoundingRectBehavior> rectOptions) const
 {
     IntRect result;
     Vector<IntRect> rects;
-    absoluteTextRects(rects);
+    bool useSelectionHeight = false;
+    RangeInFixedPosition* inFixed = nullptr;
+    absoluteTextRects(rects, useSelectionHeight, inFixed, rectOptions);
     for (auto& rect : rects)
         result.unite(rect);
     return result;
@@ -1158,7 +1160,7 @@ Vector<FloatRect> Range::absoluteRectsForRangeInText(Node* node, RenderText& ren
     unsigned startOffset = node == &startContainer() ? m_start.offset() : 0;
     unsigned endOffset = node == &endContainer() ? m_end.offset() : std::numeric_limits<unsigned>::max();
 
-    auto textQuads = renderText.absoluteQuadsForRange(startOffset, endOffset, useSelectionHeight, &isFixed);
+    auto textQuads = renderText.absoluteQuadsForRange(startOffset, endOffset, useSelectionHeight, rectOptions.contains(BoundingRectBehavior::IgnoreEmptyTextSelections), &isFixed);
 
     if (rectOptions.contains(BoundingRectBehavior::RespectClipping)) {
         Vector<FloatRect> clippedRects;
@@ -1227,7 +1229,7 @@ void Range::absoluteTextQuads(Vector<FloatQuad>& quads, bool useSelectionHeight,
         else if (is<RenderText>(*renderer)) {
             unsigned startOffset = node == &startContainer() ? m_start.offset() : 0;
             unsigned endOffset = node == &endContainer() ? m_end.offset() : std::numeric_limits<unsigned>::max();
-            quads.appendVector(downcast<RenderText>(*renderer).absoluteQuadsForRange(startOffset, endOffset, useSelectionHeight, &isFixed));
+            quads.appendVector(downcast<RenderText>(*renderer).absoluteQuadsForRange(startOffset, endOffset, useSelectionHeight, false /* ignoreEmptyTextSelections */, &isFixed));
         } else
             continue;
         allFixed &= isFixed;
